--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               
               <div class="bio-details" data-aos="fade-up">
           <p class="card-text"><b>Phone:</b><br>+9999999</p>
-          <p class="card-text"><b>Email:</b><br>email</p>
+          <p class="card-text"><b>Email:</b><br>yourmail@email.com</p>
           <p class="card-text"><b>Birthday:</b><br>Jan 1 2020</p>
           <p class="card-text"><b>Address:</b><br>Your Address</p>
           </div>
